@@ -36,7 +36,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Image-Random
-  homepage: https://github.com/tupinek/Image-Random
+  homepage: https://github.com/michal-josef-spacek/Image-Random
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Image-Random
+  repository: git://github.com/michal-josef-spacek/Image-Random
 version: '0.07'
