@@ -25,8 +25,8 @@ requires 'List::MoreUtils' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Random';
-resources 'homepage' => 'https://github.com/tupinek/Image-Random';
-resources 'repository' => 'git://github.com/tupinek/Image-Random';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Image-Random';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Image-Random';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
 test_requires 'Filesys::POSIX' => 0;
