@@ -95,7 +95,7 @@ SEE ALSO
         Perl class for creating random image.
 
 REPOSITORY
-    <https://github.com/tupinek/Image-Random>.
+    <https://github.com/michal-josef-spacek/Image-Random>.
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
